--- a/index.html
+++ b/index.html
@@ -131,6 +131,79 @@
     document.getElementById("totais").innerHTML = resumo;
   }
 </script>
+<script>
+  const produtos = {
+    "1020": "Banana Prata",
+    "1030": "Melancia",
+    "1040": "Laranja"
+  };
+
+  const clientes = {
+    "3001": "Loja Centro",
+    "3002": "Loja Bairro",
+    "3003": "Loja Atacadão"
+  };
+
+  let registros = JSON.parse(localStorage.getItem("registrosNL")) || [];
+
+  function salvar() {
+    localStorage.setItem("registrosNL", JSON.stringify(registros));
+  }
+
+  document.getElementById("codProd").addEventListener("input", function () {
+    document.getElementById("nomeProduto").innerText =
+      produtos[this.value] ? "Produto: " + produtos[this.value] : "";
+  });
+
+  document.getElementById("codCli").addEventListener("input", function () {
+    document.getElementById("nomeCliente").innerText =
+      clientes[this.value] ? "Loja: " + clientes[this.value] : "";
+  });
+
+  function adicionar() {
+    const codProd = document.getElementById("codProd").value;
+    const codCli = document.getElementById("codCli").value;
+    const qtd = Number(document.getElementById("quantidade").value);
+
+    if (!produtos[codProd] || !clientes[codCli] || qtd <= 0) {
+      alert("Preencha corretamente");
+      return;
+    }
+
+    registros.push({ codProd, codCli, qtd });
+    salvar();
+    atualizarTela();
+  }
+
+  function atualizarTela() {
+    let lista = "";
+    let totais = {};
+
+    registros.forEach(r => {
+      lista += `${produtos[r.codProd]} → ${clientes[r.codCli]} : ${r.qtd}<br>`;
+      totais[r.codProd] = (totais[r.codProd] || 0) + r.qtd;
+    });
+
+    document.getElementById("lista").innerHTML = lista;
+
+    let resumo = "";
+    for (let p in totais) {
+      resumo += `<div class="total">${produtos[p]}: ${totais[p]}</div>`;
+    }
+
+    document.getElementById("totais").innerHTML = resumo;
+  }
+
+  function limparTurno() {
+    if (confirm("Encerrar turno e apagar tudo?")) {
+      registros = [];
+      salvar();
+      atualizarTela();
+    }
+  }
+
+  atualizarTela();
+</script>
 
 </body>
 </html>
