Add button to clear turn in index.html

--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
 
   atualizarTela();
 </script>
+  <button onclick="limparTurno()" style="background:#c62828;margin-top:10px;">
+  Encerrar turno (Limpar)
+</button>
+
 
 </body>
 </html>
