Update API_URL to point to the correct endpoint

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ button {
 </div>
 
 <script>
-const API_URL = "COLE_AQUI_A_URL_DO_APPS_SCRIPT";
+const API_URL = "https://script.google.com/macros/s/AKfycbz_xttgSN1o_xOCNm6ISuqiZCHrh0wNRD6dsoEl4NS7FjaOL_wCgpTRXSb5qeO_Ix8VXA/exec";
 
 function adicionar() {
   const dados = {
