Refactor HTML structure and styles

--- a/index.html
+++ b/index.html
@@ -1,180 +1,81 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NL Frutas – Priorização</title>
-
-<style>
-body {
-  font-family: Arial, sans-serif;
-  background: #f4f6f8;
-  margin: 0;
-  padding-bottom: 80px;
-}
-
-header {
-  position: sticky;
-  top: 0;
-  background: #1b5e20;
-  color: white;
-  padding: 15px;
-  text-align: center;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.container {
-  padding: 12px;
-}
-
-input, button {
-  width: 100%;
-  padding: 14px;
-  margin-top: 8px;
-  font-size: 16px;
-  border-radius: 8px;
-  border: none;
-}
-
-input {
-  border: 1px solid #ccc;
-}
-
-button {
-  background: #2e7d32;
-  color: white;
-  font-weight: bold;
-}
-
-button.ok {
-  background: #1565c0;
-}
-
-button.limpar {
-  background: #c62828;
-}
-
-.card {
-  background: white;
-  border-radius: 10px;
-  padding: 12px;
-  margin-top: 10px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
-
-.card.ok {
-  opacity: 0.5;
-}
-
-.produto {
-  font-size: 17px;
-  font-weight: bold;
-}
-
-.qtd {
-  font-size: 20px;
-  color: #c62828;
-  font-weight: bold;
-}
-
-.status {
-  font-size: 14px;
-  margin-top: 5px;
-}
-
-footer {
-  position: fixed;
-  bottom: 0;
-  background: white;
-  width: 100%;
-  border-top: 1px solid #ddd;
-  padding: 12px;
-  text-align: center;
-  font-size: 18px;
-  font-weight: bold;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>NL Frutas</title>
+  <style>
+    body { font-family: Arial; background:#f2f2f2; padding:15px }
+    input, button { padding:8px; margin:5px; width:100% }
+    table { width:100%; border-collapse: collapse; margin-top:10px }
+    th, td { border:1px solid #ccc; padding:6px; text-align:center }
+    th { background:#333; color:#fff }
+    .ok { background:#c8e6c9 }
+  </style>
 </head>
-
 <body>
 
-<header>NL FRUTAS – PRIORIZAÇÃO</header>
+<h2>📦 NL FRUTAS – PRIORIZAÇÃO</h2>
 
-<div class="container">
+<input id="codCliente" placeholder="Código da loja">
+<input id="nomeCliente" placeholder="Nome da loja">
+<input id="codProduto" placeholder="Código do produto">
+<input id="qtd" placeholder="Quantidade">
 
-<input id="nome" placeholder="Seu nome">
-<input id="codcli" placeholder="Código da Loja">
+<button onclick="adicionar()">➕ Adicionar</button>
+<button onclick="carregar()">📥 Carregar Loja</button>
 
-<button onclick="carregar()">Carregar Loja</button>
-<button class="limpar" onclick="limpar()">Limpar Dia</button>
-
-<input id="busca" placeholder="Buscar produto" onkeyup="listar()">
-<label><input type="checkbox" id="pendente" onchange="listar()"> Mostrar só pendentes</label>
-
-</div>
-
-<div class="container" id="lista"></div>
-
-<footer>
-Total a pegar: <span id="total">0</span>
-</footer>
+<table id="tabela">
+  <thead>
+    <tr>
+      <th>Produto</th>
+      <th>Qtd</th>
+      <th>Status</th>
+      <th>Ação</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>
 
 <script>
-function carregar() {
-  const cod = document.getElementById("codcli").value;
-  google.script.run.carregarPorCliente(cod);
-  setTimeout(listar, 800);
+function adicionar() {
+  google.script.run.adicionarItem(
+    codCliente.value,
+    nomeCliente.value,
+    codProduto.value,
+    qtd.value
+  );
+  alert("Adicionado!");
 }
 
-function listar() {
-  google.script.run.withSuccessHandler(dados => {
-    let html = "";
-    let total = 0;
-    const busca = document.getElementById("busca").value.toLowerCase();
-    const soPendente = document.getElementById("pendente").checked;
+function carregar() {
+  google.script.run.withSuccessHandler(mostrar)
+    .carregarPorCliente(codCliente.value);
+}
 
-    for (let i = 1; i < dados.length; i++) {
-      if (soPendente && dados[i][5] === "OK") continue;
-      if (busca && !dados[i][3].toLowerCase().includes(busca)) continue;
+function mostrar(dados) {
+  const tbody = document.querySelector("#tabela tbody");
+  tbody.innerHTML = "";
+  dados.forEach((r, i) => {
+    const tr = document.createElement("tr");
+    if (r[6] === "OK") tr.className = "ok";
 
-      if (dados[i][5] !== "OK") total += Number(dados[i][4]);
-
-      html += `
-        <div class="card ${dados[i][5] === "OK" ? "ok" : ""}">
-          <div class="produto">${dados[i][3]}</div>
-          <div class="qtd">${dados[i][4]}</div>
-          <div class="status">Status: ${dados[i][5]} ${dados[i][6] ? " – " + dados[i][6] : ""}</div>
-          ${dados[i][5] !== "OK"
-            ? `<button class="ok" onclick="ok(${i+1})">OK</button>`
-            : ""}
-        </div>
-      `;
-    }
-
-    document.getElementById("lista").innerHTML = html;
-    document.getElementById("total").innerText = total;
-  }).listarControle();
+    tr.innerHTML = `
+      <td>${r[4]}</td>
+      <td>${r[5]}</td>
+      <td>${r[6]}</td>
+      <td>
+        ${r[6] === "PENDENTE" ? `<button onclick="ok(${i+2})">OK</button>` : ""}
+      </td>
+    `;
+    tbody.appendChild(tr);
+  });
 }
 
 function ok(linha) {
-  const nome = document.getElementById("nome").value;
-  if (!nome) return alert("Informe seu nome");
-  google.script.run.marcarOK(linha, nome);
-  setTimeout(listar, 400);
+  google.script.run.marcarOk(linha);
+  carregar();
 }
-
-function limpar() {
-  if (confirm("Deseja limpar o dia inteiro?")) {
-    google.script.run.limparDia();
-    setTimeout(listar, 500);
-  }
-}
-
-listar();
 </script>
-google.script.run.carregarPorCliente(...)
 
 </body>
 </html>
-
